// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en componente principal GifExpertApp Debe de hacer match la snapshot 1`] = `
<Fragment>
  <h1
    className="titulo"
  >
    Gif Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en componente principal GifExpertApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1
    className="titulo"
  >
    Gif Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
